* Task/Bug Id: Changed  Combobox to DHTMLX combo box and alternate coloring and  right aligned label in SCG page (Ankush) * Code Reviewed By: Mosin Kazi * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD â€“ X
SVN-Revision: 29926

--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -1078,3 +1078,6 @@ input.actionButton{ /* optional style for form and action buttons */
 	text-decoration:underline;
 }
 /*End of tags CSS - Ashraf*/
+.align_left_style1{
+		padding-left:20px;
+}
